Require ZGC barrier capability for readiness